# SimpleX

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py  sources.cmake
assets/anymal_c_simple_description/: README.md
assets/anymal_c_simple_description/meshes/: base.dae  battery.dae  bottom_shell.dae  depth_camera.dae  drive.dae  face.dae  foot.dae  handle.dae  hatch.dae  hip_l.dae  hip_r.dae  lidar.dae  lidar_cage.dae  remote.dae  shank_l.dae  shank_r.dae  thigh.dae  top_shell.dae  wide_angle_camera.dae
assets/anymal_c_simple_description/srdf/: anymal.srdf
assets/anymal_c_simple_description/urdf/: anymal.urdf
assets/unitree_a1/: a1.xml
assets/unitree_go2/: CHANGELOG.md  LICENSE  README.md  go2.xml  go2_display.xml  go2_mjx.xml  scene.xml  scene_display.xml  sensor_feet.xml
assets/unitree_go2/mjcf/: README.md  go2.xml
assets/unitree_go2/srdf/: go2.srdf
benchmarks/: CMakeLists.txt  mujoco-humanoid-introspection.cpp  mujoco-humanoid.cpp
bindings/: CMakeLists.txt
bindings/python/: CMakeLists.txt  module.cpp
bindings/python/core/: expose-constraints-problem-derivatives.cpp  expose-contact-frame.cpp  expose-ncp-derivatives.cpp  expose-simulator-derivatives.cpp  expose-simulator-x.cpp
bindings/python/simplex/: __init__.py
bindings/python/solver/: expose-clarabel-solver.cpp
cimpc_sandbox/: CMakeLists.txt  calcDiff_test.ipynb  cimpc_test.ipynb
cimpc_sandbox/tests/: test_contact_solver.cpp  test_cro.cpp  test_eigen.cpp  test_logger.cpp.bak  test_pin.cpp  test_sim.cpp.bak
cimpc_sandbox/utils/: cimpc.py  costs.py  models.py  transforms.py
configs/: go2_sim_config.yaml
demo/: go2_sim.py  simplex_sim.py
docs/: cimpc_sandbox_cimpc_analysis.md  costs_math_mapping.md  crocoddyl_custom_costmodel_tutorial.md  crocoddyl_notebooks_abstract_models_guide.md
examples/: display_model.py  quadrupedal_gaits_fwddyn.py  quadrupedal_gaits_invdyn.py  test_force.py  test_go2_simulator_derivatives.py  test_pin_display.py  test_simulate.py  test_solvers.py
include/simplex/: fwd.hpp  macros.hpp
include/simplex/bindings/python/: fwd.hpp
include/simplex/bindings/python/core/: constraints-problem-derivatives.hpp  ncp-derivatives.hpp  simulator-derivatives.hpp  simulator-x.hpp
include/simplex/bindings/python/solver/: clarabel-solver.hpp
include/simplex/core/: constraints-problem-derivatives.hpp  constraints-problem-derivatives.hxx  constraints-problem-derivatives.txx  constraints-problem.hpp  constraints-problem.hxx  constraints-problem.txx  contact-frame.hpp  contact-frame.hxx  fwd.hpp  ncp-derivatives.hpp  ncp-derivatives.hxx  ncp-derivatives.txx  simulator-derivatives.hpp  simulator-derivatives.hxx  simulator-derivatives.txx  simulator-x.hpp  simulator-x.hxx  simulator-x.txx  simulator.hpp  simulator.hxx  simulator.txx
include/simplex/math/: fwd.hpp  qr.hpp
include/simplex/pinocchio_template_instantiation/: aba-derivatives.txx  aba.txx  crba.txx  joint-model.txx
include/simplex/solver/: admm-solver.hpp  admm-solver.hxx  clarabel-solver.hpp  clarabel-solver.hxx
include/simplex/utils/: logger.hpp  visitors.hpp
scripts/: kill_meshcat_ports.sh
simplex_sandbox/derivatives/: box_trajectory_identification.py  compute_derivatives.py  compute_smooth_derivatives.py  contact_frame_derivatives.py  derivative_contact_frame_wrt_configuration.py  derivative_placement_from_normal_and_point.py  go2_contact_id.py  simulation_utils.py  sliding_cube_derivatives.py
simplex_sandbox/forward/: cartpole.py  cassie.py  four_bar_linkage.py  g1.py  go2.py  go2_stand.py  humanoid.py  memory_footprint.py  panda_arm.py  parallel_rollout.py  pendulum.py  pyramid_and_robots.py
simplex_sandbox/robots/: humanoid.xml  pendulum.xml
simplex_sandbox/robots/go2/mjcf/: go2.xml
simplex_sandbox/utils/: sim_utils.py  viz_common.py  viz_utils.py
src/: CMakeLists.txt  empty.cpp
src/core/: constraints-problem-derivatives.cpp  constraints-problem.cpp  ncp-derivatives.cpp  simulator-derivatives.cpp  simulator-x.cpp  simulator.cpp
src/pinocchio_template_instantiation/: aba-derivatives.cpp  aba.cpp  crba.cpp  joint-model.cpp
tests/: CMakeLists.txt  test-utils.hpp
tests/config/: derivatives-simulator.json  derivatives-simulator.yaml  test.yaml
tests/derivatives/: CMakeLists.txt  contact-frame.cpp  ncp.cpp  simulator.cpp
tests/forward/: CMakeLists.txt  low-complexity-delassus-precision.cpp  mujoco-humanoid.cpp  simulation-combine-constraints.cpp  simulation-robots.cpp  simulator-minimal.cpp  simulator.cpp  simulatorx-minimal.cpp  simulatorx-robots.cpp  urdf-romeo.cpp
tests/resources/: CMakeLists.txt
tests/solver/: CMakeLists.txt  callback_with_state.cpp  clarabel_solve_callback.cpp
utils/: cb_models.py  cimpc.py  costs.py  logger.py  models.py  params.py  sim_utils.py  traj_drawer.py  transforms.py  visualize.py  viz_utils.py
